# agent-runtime

./: .gitignore  main.py  pyproject.toml
src/: config.py  logging_config.py
src/agents/agents/: coordinator_agent.py  docker_runtime_client.py  extraction_agent.py  reporting_agent.py  researcher_agent.py
src/agents/llms/: groq_llm.py  hf_llm.py
src/agents/orchestration/: states.py  workflow.py
src/agents/prompts/: coordinator_prompt.py  reporter_prompt.py  researcher_prompt.py
src/agents/tools/: docker_runtime_client.py  knowledge_api_tool.py  runtime_execution_tool.py
src/backend/: container_config.py  main.py
src/demo_project/: payment_validator.py  test_payment_validator.py
src/frontend/: app.py  startup.sh
src/knowledge_api/: __init__.py  knowledge_api_client.py  knowledge_graph.py  sample_data.py  sample_data_temp.py
