[project]
name = "agent-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.121.2",
    "ipython>=9.7.0",
    "langchain>=1.0.7",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "langgraph>=1.0.3",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
