[project]
name = "agent-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "black>=25.11.0",
    "docker>=7.1.0",
    "fastapi>=0.121.2",
    "flake8>=7.3.0",
    "ipython>=9.7.0",
    "isort>=7.0.0",
    "langchain>=1.0.7",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "langgraph>=1.0.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
